# MAGDiff

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
magdiff/: __init__.py  parse.py  paths.py  run.py
magdiff/controller/: __init__.py  example.py  osc_parallel.py  render.py
magdiff/grasp/: __init__.py  acd.py  loader.py
magdiff/grasp/visualization/: grasp_viz.py
magdiff/models/: chainR-6.xml  world.xml  world_6_general.xml  world_parse_string.xml
magdiff/telemetry/: __init__.py
magdiff/tests/: MJDATA.TXT  loader_test.py  obj_load_mj_test.py  object_load_warp_test.py  osc_test.py  osc_warp_test.py  parse_grasp_test.py  test.py  test_bezier.py  warp_render_test.py
magdiff/trajectory/: __init__.py  bezier.py  interface.py
