[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magdiff"
version = "0.1.0"
description = "GRASP control package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mujoco>3.0.0","mujoco-warp>3.0.0","coacd>=1.0.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["magdiff*"]